Description
When using TSHttpConnect to connect to ATS itself (internal vconnection), sending a POST request and receiving a CHUNKED response. ATS does not fire neither TS_VCONN_READ_COMPLETE nor TS_VCONN_EOS.
Trying to close the vconnection from the plug-in after receiving the last chunk ("\r\n0\r\n") results into the PluginVC repeating the following message:
[Jul 14 21:24:06.094] Server {0x7ffff7fbe800} DEBUG: (pvc_event) [0] Passive: Received event 1
I am glad to provide an example if that helps.
Attachments
Attachments
Issue Links
- relates to
-
TS-4924 Protocol plugin performance penalty
- Open
-
TS-4960 Undo internal request tunnelling hacks
- Open
-
TS-3584 SPDY and H2 requests should not trigger connection keep-alive processing
- Resolved
-
TS-3640 Drupal auth fails with dda6814f07ee59c over SPDY
- Resolved
-
TS-3778 Memory leak caused by the TS-3640.
- Closed
-
TS-3404 PluginVC not notifying ActiveSide of EOS due to race condition in handling terminating chunk.
- Closed
-
TS-4836 POST correctness should not depend on the internal flag
- Open